--- a/fonts/stylesheet.css
+++ b/fonts/stylesheet.css
@@ -33,7 +33,7 @@
 
 }
 
-@font-face {
+/*@font-face {
     font-family: 'unb_officeregular';
     src: url('unb-office_regular-webfont.eot');
     src: url('unb-office_regular-webfont.eot?#iefix') format('embedded-opentype'),
@@ -43,7 +43,7 @@
     font-weight: normal;
     font-style: normal;
 
-}
+}*/
 
 @font-face {
     font-family: 'unb_officebold';
