--- a/css/scroll.css
+++ b/css/scroll.css
@@ -45,7 +45,7 @@ div.scrollingHotSpotRight {
 	background-position-y:50%;
 	position:absolute;
 	z-index:200;
-	right:0;
+	right:0px;
 	cursor:url(../images/cursors/cursor_arrow_right.png), url(../images/cursors/cursor_arrow_right.cur), e-resize;
 }
 
