--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+#clientes_section{
+    margin-right: 400px;
+}
+
 #bg_almanaque_section {
 	width:450px; 
 	height:600px; 
@@ -197,7 +201,7 @@ body {
 	font-size:11pt;
 	white-space:nowrap;
 	margin:0;
-    /*overflow-x: hidden;*/
+    overflow-x: hidden;
 }
 
 .section_global {
@@ -319,7 +323,7 @@ body {
 	float:left;
 	position:relative;
 	margin-top:100px;
-	margin-right:300px;
+	margin-right:340px;
 	margin-left:150px;
 	padding:15px 45px 15px 0px;
 }
@@ -456,8 +460,7 @@ body {
 	margin-left:auto;
 	margin-right:auto;
 	display:block;
-	/*width:100%;*/
-    width: 87.35%;
+	width:100%;
 	z-index:1000;
 }
 
@@ -479,7 +482,7 @@ body {
 	display:block;
 	background-color:#FFFFFF;
 	text-transform:uppercase;
-	color:#929191;
+	color:#dfdfdf;
 	-webkit-box-shadow:rgba(0, 0, 0, 0.292969) 0px 1px 3px;
 	box-shadow:rgba(0, 0, 0, 0.292969) 0px 1px 3px;
 	-o-box-shadow:rgba(0, 0, 0, 0.292969) 0px 1px 3px;
@@ -932,9 +935,8 @@ body {
     display: block;
 }
 
-/* almanaque */
+/* almanaque*/
 
 #section_05{
-    position: relative;
-    left: 200px;
+    padding-left: 280px;
 }
